--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" href="{{ ASSETS_ROOT }}/favicon.ico" type="image/x-icon">
-  <link rel="canonical" href="https://appseed.us/adminlte"/>
+  <link rel="canonical" href=""/>
 
   <title>
     Hira Sport - {% block title %}{% endblock %} 
