search error in admin solved, aaded to many session solved

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -96,12 +96,12 @@
           <!-- small box -->
           <div class="small-box bg-green">
             <div class="inner">
-              <h4>گزارش</h4>
+              <h4>فروشگاه</h4>
 
               <p> -</p>
             </div>
             <div class="icon">
-              <i class="ion ion-stats-bars"></i>
+              <i class="fa fa-shopping-cart"></i>
             </div>
             <a href="#" class="small-box-footer">اطلاعات بیشتر <i class="fa fa-arrow-circle-left"></i></a>
           </div>
