List of class changed to all day

--- a/apps/templates/home/index.html
+++ b/apps/templates/home/index.html
@@ -81,7 +81,7 @@
           <!-- small box -->
           <div class="small-box bg-aqua">
             <div class="inner">
-              <h4>کلاسهای امروز</h4>
+              <h4>کلاسها</h4>
 
               <p> -  </p>
             </div>
