--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -35,7 +35,7 @@
           </a>
           <ul class="treeview-menu">
             <li class="active"><a href="/"><i class="fa fa-circle-o"></i>  خانه  </a></li>
-            <li ><a href="/todayclasslist"><i class="fa fa-circle-o"></i> کلاس های امروز </a></li>
+            <li ><a href="/todayclasslist"><i class="fa fa-circle-o"></i> کلاس ها </a></li>
             <li><a href="/admin"><i class="fa fa-circle-o"></i>  ثبت نام و ویرایش</a></li>
             <li><a href="/trainerslist"><i class="fa fa-circle-o"></i>  پنل مربیان   </a></li>
           </ul>
