--- a/apps/templates/home/classlist.html
+++ b/apps/templates/home/classlist.html
@@ -23,6 +23,7 @@
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/select2/dist/css/select2.min.css">
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/Ionicons/css/ionicons.min.css">
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/plugins/toastr/toastr.min.css">
+  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/persian-datepicker-0.4.5.min.css" />
 
   <style>
     .example-modal .modal {
@@ -114,8 +115,29 @@
                   {% for trainer in trainers %}
                   <option  value="{{trainer.id}}">{{trainer.full_name}}</option>
                   {% endfor%}
-
                 </select>
+              </div>
+            </div>
+            <!-- /.box-body -->
+          </div>
+          <!-- /.box -->
+        </div>
+      </section>
+
+      <section>
+        <div class="col-xs-12">
+          <div class="box">
+            <div class="box-header">
+              <h3 class="box-title">تاریخ کلاس</h3>
+              <div class="box-tools">
+                <div class="input-group input-group-sm" style="width: 150px;">                  
+                </div>
+              </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body " style="width: 75%;">
+              <div class="form-group">
+                <input form="myForm" name="date" type="text" id="tarikh" class="form-control pull-right" style="width: 30%;">
               </div>
             </div>
             <!-- /.box-body -->
@@ -170,6 +192,8 @@
   <script src="{{ ASSETS_ROOT }}/plugins/sweetalert2/sweetalert2.min.js"></script>
   <script src="{{ ASSETS_ROOT }}/plugins/toastr/toastr.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-date-0.1.8.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-datepicker-0.4.5.min.js"></script>
 
 
   <!-- AdminLTE App -->
@@ -199,13 +223,16 @@
         $('#tarikh').persianDatepicker({
             altField: '#tarikhAlt',
             altFormat: 'X',
-            format: 'D MMMM YYYY HH:mm a',
+            responsive	: true,
+            format: 'D,MMMM,YYYY ',
             observer: true,
             timePicker: {
-                enabled: true
+                enabled: false
             },
         });
     });
+</script>
+<script>
   $(function () {
     //Initialize Select2 Elements
     $('.select2').select2()
