hesam requested added

--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -42,7 +42,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-8 col-sm-offset-2 text">
-                            <h1 style="color:red;"><strong>پرتال ورزشگاه هیرا</strong> </h1>
+                            <h1 style="color:red;"><strong>پرتال باشگاه هیرا</strong> </h1>
                             <div class="description">
                             </div>
                         </div>
