--- a/apps/templates/home/classlist.html
+++ b/apps/templates/home/classlist.html
@@ -80,7 +80,7 @@
                                     {% csrf_token %}
                                     {% for student in students %}
                   <tr>
-                                            <td><label>{{ student.full_name }} </label></td>
+                                            <td><label><a href='/personalreport/{{student.id}}'> {{ student.full_name }}</a> </label></td>
                                             <td>
                                               <input type="radio" name="{{ student.id }}"     value="present">حاضر  
                                               <input type="radio" name="{{ student.id }}" value="absent">غایب                                            <input type="radio" name="{{ student.id }}"     value="validabsent">غیبت مجاز
