--- a/apps/templates/home/trainerslist.html
+++ b/apps/templates/home/trainerslist.html
@@ -1,8 +1,7 @@
 {% extends "layouts/base.html" %}
 {% load static %}
 
-{% block title %} Bla
-nk Page {% endblock %} 
+{% block title %} لیست مربیان {% endblock %} 
 
 <!-- Element injected in the BODY element -->
 {% block body_class %} sidebar-mini pace-primary {% endblock body_class %}
@@ -49,7 +48,7 @@ nk Page {% endblock %}
             <!-- Add the bg color to the header using any of the bg-* classes -->
             <div class="widget-user-header {{ colorbg|random }}">
               
-              <a href='/trainerreport/{{trainer.id}}'><h3 class="widget-user-username">{{trainer.full_name}}</h3></a>
+              <a style="color : black;" href='/trainerreport/{{trainer.id}}'><h3 class="widget-user-username">{{trainer.full_name}}</h3></a>
             </div>
 
             <div class="widget-user-image">
