--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -25,7 +25,7 @@
 
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
-        <li class="header" style="color: rgb(82,139,184)"> {{ jdate }}</li>
+        <li class="header" style="font-size: 120%; text-align: center ; color: rgb(82,139,184)"> {{ jdate }}<br> {% now "G:i" %} </li>
         <li class="active treeview">
           <a href="#">
             <i class="fa fa-dashboard"></i> <span>داشبرد</span>
