--- a/apps/templates/includes/sidebar.html
+++ b/apps/templates/includes/sidebar.html
@@ -18,11 +18,10 @@
 
         </div>
         <div class="pull-left info">
-          <p>{{ user.username }} </p>
+          <p>{{ user.username}} </p>
         </div>
       </div>
-      
-
+      {% if user.is_superuser	 %}
       <!-- sidebar menu: : style can be found in sidebar.less -->
       <ul class="sidebar-menu" data-widget="tree">
         <li class="header" style="font-size: 120%; text-align: center ; color: rgb(82,139,184)"> {{ jdate }}<br> {% now "G:i" %} </li>
@@ -41,6 +40,7 @@
           </ul>
         </li>
         </ul>
+        {% endif %}
     </section>
     <!-- /.sidebar -->
   </aside>
