--- a/apps/templates/includes/navigation.html
+++ b/apps/templates/includes/navigation.html
@@ -27,6 +27,9 @@
           <li >
               <a href="/"><span class="hidden-xs"> خانه </span><i class="fa fa-home"></i></a>
           </li>
+          <li >
+            <a href="/change_password"><span class="hidden-xs"> تغییر گذرواژه </span><i class="fa fa-key"></i></a>
+        </li>
        <li >
               <a href="/logout/"><span class="hidden-xs"> خروج </span><i class="fa fa-sign-out"></i></a>
           </li>
