--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -1,4 +1,5 @@
 {% extends "layouts/base.html" %}
+{% load static %}
 
 {% load custom_filters %}
 
@@ -52,8 +53,10 @@
           <!-- Profile Image -->
           <div class="box box-primary">
             <div class="box-body box-profile">
-              {% if imglen != 0 %}
-              <img class="profile-user-img img-responsive img-circle" src="{{person.simage.url}}" alt="User profile picture">
+              {% if trainer.simage %}
+              <img class="profile-user-img img-responsive img-circle" src="{{trainer.simage.url}}" >
+              {% else %}
+              <img class="profile-user-img img-responsive img-circle" src="{% static 'assets/img' %}/avatar.png"> 
               {% endif %}
               <h3 class="profile-username text-center">{{person.first_name }} {{person.last_name}}</h3>
               <form method='POST'>
