Date Range added with js

--- a/apps/templates/home/classlist.html
+++ b/apps/templates/home/classlist.html
@@ -83,7 +83,7 @@
                                             <td><label><a href='/personalreport/{{student.id}}'> {{ student.full_name }}</a> </label></td>
                                             <td>
                                               <input type="radio" name="{{ student.id }}"     value="present">حاضر  
-                                              <input type="radio" name="{{ student.id }}" value="absent">غایب                                            <input type="radio" name="{{ student.id }}"     value="validabsent">غیبت مجاز
+                                              <input type="radio" name="{{ student.id }}" value="absent">غایب                                            <input type="radio" name="{{ student.id }}"     value="vabsent">غیبت مجاز
                                               <br>
                                             </td>
                                             <td>
