--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -2,6 +2,8 @@
 {% load static %}
 
 {% load custom_filters %}
+{% load weekdayFinder %}
+
 
 {% block title %} Profile {% endblock %} 
 
@@ -16,6 +18,9 @@
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/rtl.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/font-awesome/css/font-awesome.min.css">
+
+    <link rel="stylesheet" href="{{ ASSETS_ROOT }}//bower_components/datatables.net-bs/css/dataTables.bootstrap.min.css">
+
   <!-- Ionicons -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/Ionicons/css/ionicons.min.css">
   <!-- Theme style -->
@@ -23,6 +28,8 @@
   <!-- AdminLTE Skins. Choose a skin from the css/skins
        folder instead of downloading all of them to reduce the load. -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/skins/_all-skins.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/persian-datepicker-0.4.5.min.css" />
 
 {% endblock stylesheets %}
 
@@ -38,8 +45,7 @@
         پروفایل کاربری
       </h1>
       <ol class="breadcrumb">
-        <li><a href="#"><i class="fa fa-dashboard"></i> خانه</a></li>
-        <li><a href="#">مثال ها</a></li>
+        <li><a href="/"><i class="fa fa-dashboard"></i> خانه</a></li>
         <li class="active"> پروفایل</li>
       </ol>
     </section>
@@ -53,18 +59,12 @@
           <!-- Profile Image -->
           <div class="box box-primary">
             <div class="box-body box-profile">
-              {% if trainer.simage %}
+              {% if person.simage %}
               <img class="profile-user-img img-responsive img-circle" src="{{trainer.simage.url}}" >
               {% else %}
               <img class="profile-user-img img-responsive img-circle" src="{% static 'assets/img' %}/avatar.png"> 
               {% endif %}
               <h3 class="profile-username text-center">{{person.first_name }} {{person.last_name}}</h3>
-              <form method='POST'>
-                  {% csrf_token %}
-                  {% if buttonShow %}
-                      <button onclick="myFunction()" type="submit" name="register" class="btn btn-danger btn-block">کسر یک جلسه</button>
-                  {%endif%}
-              </form>
             </div>
             <!-- /.box-body -->
           </div>
@@ -145,8 +145,7 @@
             <ul class="nav nav-tabs">
               <li class="active"><a href="#analysis" data-toggle="tab">آنالیز ها</a></li>
               <li><a href="#charts" data-toggle="tab">نمودار</a></li>
-              <li><a href="#sessions" data-toggle="tab">گزارش حضور</a></li>
-              <li><a href="#abcenses" data-toggle="tab">گزارش غیبت</a></li>
+              <li><a href="#sessions" data-toggle="tab">گزارش حضور و غیاب</a></li>
               <li><a href="#peyments" data-toggle="tab">گزارش پرداخت</a></li>
             </ul>
             <div class="tab-content">
@@ -229,38 +228,56 @@
               </div>
               </div>
               <div class="tab-pane" id="sessions">
-                <div class="box-body table-responsive no-padding">
-                  <table class="table table-hover">
-                                <tr>
-                                    <th>ردیف</th>
-                                    <th>روز حضور</th>
-                                </tr>
-                                {% for s in session%}
-                                <tr>
-                                    <td>{{s.id}}</td>
-                                    <td>{{s.dos}}</td>
-                                </tr>
-                                {%endfor%}
+                <div class="box-body table-responsive no-padding">              
+                  <div class="input-group input-daterange">
+                    <div class="input-group-addon">from</div>
+                    <input type="text" id="start-date" class="form-control date-range-filter" data-date-format="yyyy-mm-dd" placeholder="From:">
+                    <div class="input-group-addon">to</div>
+                    <input type="text" id="end-date" class="form-control date-range-filter" data-date-format="yyyy-mm-dd" placeholder="To:">
+
+                  </div>
+                  <table class="table table-hover" id="table1" style="direction: rtl;">
+                      <thead>
+                          <tr>
+                              <th style="text-align: right;">ردیف</th>
+                              <th style="text-align: right;">روز حضور</th>
+                              <th style="text-align: right;">روز هفته</th>
+                              <th style="text-align: right;">وضعیت حضور</th>
+                          </tr>
+                      </thead>
+                      <tbody>
+                          {% for s in session%}
+                          <tr>
+                              <td>{{s.id}}</td>
+                              <td>{{s.dos}}</td>
+                              <td>{{s.dos | wdayFinder}}</td>
+                              <td>حاضر</td>
+                          </tr>
+                          {%endfor%}
+                          {% for s in absence%}
+                          <tr>
+                              <td>{{s.id}}</td>
+                              <td>{{s.doa}}</td>
+                              <td>{{s.doa | wdayFinder}}</td>
+                              <td>غیبت غیر مجاز</td>
+                          </tr>
+                          {%endfor%}
+                          {% for v in vabsence%}
+                          <tr>
+                              <td>{{v.id}}</td>
+                              <td>{{v.dova}}</td>
+                              <td>{{v.dova | wdayFinder}}</td>
+                              <td>غیبت  مجاز</td>
+                          </tr>
+                          {%endfor%}
+
+                      </tbody>
                   </table>
+                  <ul id="itemList"></ul>
+
                 </div>              
               </div>
               <!-- /.tab-pane -->
-              <div class="tab-pane" id="abcenses">
-                <div class="box-body table-responsive no-padding">
-                  <table class="table table-hover">
-                                <tr>
-                                    <th>ردیف</th>
-                                    <th>روز غیبت</th>
-                                </tr>
-                                {% for s in absence%}
-                                <tr>
-                                    <td>{{s.id}}</td>
-                                    <td>{{s.doa}}</td>
-                                </tr>
-                                {%endfor%}
-                  </table>
-                </div>              
-              </div>
               <div class="tab-pane" id="peyments">
                 <div class="box-body table-responsive no-padding">
                   <table class="table table-hover">
@@ -307,14 +324,29 @@
 <script src="{{ ASSETS_ROOT }}/bower_components/jquery/dist/jquery.min.js"></script>
 <!-- Bootstrap 3.3.7 -->
 <script src="{{ ASSETS_ROOT }}/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-<!-- FastClick -->
+  <script src="{{ ASSETS_ROOT }}/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="{{ ASSETS_ROOT }}/bower_components/fastclick/lib/fastclick.js"></script>
-<!-- AdminLTE App -->
+<script src="{{ ASSETS_ROOT }}/bower_components/jquery-ui/jquery-ui.min.js"></script>
 <script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{{ ASSETS_ROOT }}/dist/js/demo.js"></script>
-<script src="{{ ASSETS_ROOT }}/dist/js/canvasjs.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/moment/min/moment.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
 
+<script src="{{ ASSETS_ROOT }}/dist/js/canvasjs.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-date-0.1.8.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-datepicker-0.4.5.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <!-- AdminLTE App -->
+  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/AdminLTE.css">
+  <!-- AdminLTE for demo purposes -->
+  <script src="{{ ASSETS_ROOT }}/dist/js/demo.js"></script>
+  
+  <script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
 <script>
   window.onload = function () {
     var chart = new CanvasJS.Chart("chartContainer", {
@@ -372,6 +404,74 @@ function myFunction() {
 }
 </script>
 
-{% endblock javascripts %}  
+<script>
+function convertPersianToEnglishDigits(persianString) {
+    // Ensure persianString is a string
+    if (typeof persianString !== 'string') {
+        persianString = String(persianString);
+    }
+
+    const persianDigits = [/۰/g, /۱/g, /۲/g, /۳/g, /۴/g, /۵/g, /۶/g, /۷/g, /۸/g, /۹/g];
+    const englishDigits = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9'];
+
+    // Replace each Persian digit with its English equivalent
+    for (let i = 0; i < 10; i++) {
+        persianString = persianString.replace(persianDigits[i], englishDigits[i]);
+    }
+
+    return persianString;
+}
+$(document).ready(function() {
+    // Initialize DataTable
+    var table = $('#table1').DataTable({
+              "order": [[1, "asc"]],        
+              "searching": true,
+              "paging":false,
+              
+
+    });
+
+    // Date range filtering
+    $.fn.dataTable.ext.search.push(
+        function(settings, data, dataIndex) {
+            console.log("OOOOO")
+  
+            startDateVal = $('#start-date').val();
+            endDateVal = $('#end-date').val();
+            //var date = new Date(data[1]); // Date column data
+            dateVal=data[1]
+            
+            console.log(startDateVal)
+            console.log(endDateVal)
+            console.log(dateVal)
+
+            return (dateVal >= convertPersianToEnglishDigits(startDateVal) && dateVal <= convertPersianToEnglishDigits(endDateVal));
+        }
+    );
+
+    // Initialize Persian datepickers
+    $('#start-date').persianDatepicker({
+        format: 'YYYY-MM-DD',
+        observer: true,
+        onSelect: function() {
+            table.draw();
+        }
+    });
+
+    $('#end-date').persianDatepicker({
+        format: 'YYYY-MM-DD',
+        observer: true,
+        onSelect: function() {
+            table.draw();
+        }
+    });
+
+    // Draw table initially
+    table.draw();
+});
+    
+
+</script>
 
 
+  {% endblock javascripts %}  
