--- a/apps/templates/home/trainerreport.html
+++ b/apps/templates/home/trainerreport.html
@@ -16,6 +16,9 @@
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/font-awesome/css/font-awesome.min.css">
   <!-- Ionicons -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/bower_components/Ionicons/css/ionicons.min.css">
+  <link rel="stylesheet" href="https://cdn.datatables.net/2.0.8/css/dataTables.bootstrap4.css">
+  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/persian-datepicker-0.4.5.min.css" />
+
   <!-- Theme style -->
   <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/AdminLTE.css">
   <!-- AdminLTE Skins. Choose a skin from the css/skins
@@ -47,8 +50,8 @@
           <!-- Profile Image -->
           <div class="box box-primary">
             <div class="box-body box-profile">
-               {% if trainer.simage %}
-              <img class="profile-user-img img-responsive img-circle" src="{{trainer.simage.url}}" >
+               {% if person.simage %}
+              <img class="profile-user-img img-responsive img-circle" src="{{person.simage.url}}" >
               {% else %}
               <img class="profile-user-img img-responsive img-circle" src="{% static 'assets/img' %}/avatar.png"> 
               {% endif %}
@@ -134,20 +137,31 @@
 
               <div class="tab-pane" id="sessions">
                 <div class="box-body table-responsive no-padding">
-                  <table class="table table-hover">
-                                <tr>
-                                    <th>ردیف</th>
-                                    <th>روز حضور</th>
-                                    <th> تعداد نفرات</th>
+                    <div class="input-group input-daterange">
+                    <div class="input-group-addon">from</div>
+                    <input type="text" id="start-date" class="form-control date-range-filter" data-date-format="yyyy-mm-dd" placeholder="From:" >
+                    <div class="input-group-addon">to</div>
+                    <input type="text" id="end-date" class="form-control date-range-filter" data-date-format="yyyy-mm-dd" placeholder="To:" >
+                  </div>
+
+                  <table class="table table-hover" id="table1" style="direction: rtl;">
+                                <thead>
+
+                                  <tr>
+                                    <th style="text-align: right;">ردیف</th>
+                                    <th style="text-align: right;">روز حضور</th>
+                                    <th style="text-align: right;"> تعداد نفرات</th>
                                 </tr>
+                              </thead>
+                              <tbody>
                                 {% for s in trainerseesion%}
                                 <tr>
                                     <td>{{s.id}}</td>
                                     <td>{{s.dos}}</td>
                                     <td>{{s.sstudent.all | length}}</td>
-
                                 </tr>
                                 {%endfor%}
+                              </tbody>  
                   </table>
                 </div>              
               </div>
@@ -186,5 +200,106 @@
 <script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="{{ ASSETS_ROOT }}/dist/js/demo.js"></script>
+
+
+<!-- jQuery 3 -->
+<script src="{{ ASSETS_ROOT }}/bower_components/jquery/dist/jquery.min.js"></script>
+<!-- Bootstrap 3.3.7 -->
+<script src="{{ ASSETS_ROOT }}/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/bower_components/jquery/dist/jquery.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/fastclick/lib/fastclick.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/jquery-ui/jquery-ui.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
+<!-- AdminLTE for demo purposes -->
+<script src="{{ ASSETS_ROOT }}/dist/js/demo.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/moment/min/moment.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/bower_components/bootstrap-daterangepicker/daterangepicker.js"></script>
+
+<script src="{{ ASSETS_ROOT }}/dist/js/canvasjs.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-date-0.1.8.min.js"></script>
+<script src="{{ ASSETS_ROOT }}/dist/js/persian-datepicker-0.4.5.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables/jquery.dataTables.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-bs4/js/dataTables.bootstrap4.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/dataTables.responsive.min.js"></script>
+  <script src="{{ ASSETS_ROOT }}/plugins/datatables-responsive/js/responsive.bootstrap4.min.js"></script>
+  <!-- AdminLTE App -->
+  <link rel="stylesheet" href="{{ ASSETS_ROOT }}/dist/css/AdminLTE.css">
+  <!-- AdminLTE for demo purposes -->
+  <script src="{{ ASSETS_ROOT }}/dist/js/demo.js"></script>
+  
+  <script src="{{ ASSETS_ROOT }}/dist/js/adminlte.min.js"></script>
+
+
+
+<script>
+function convertPersianToEnglishDigits(persianString) {
+    // Ensure persianString is a string
+    if (typeof persianString !== 'string') {
+        persianString = String(persianString);
+    }
+
+    const persianDigits = [/۰/g, /۱/g, /۲/g, /۳/g, /۴/g, /۵/g, /۶/g, /۷/g, /۸/g, /۹/g];
+    const englishDigits = ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9'];
+
+    // Replace each Persian digit with its English equivalent
+    for (let i = 0; i < 10; i++) {
+        persianString = persianString.replace(persianDigits[i], englishDigits[i]);
+    }
+
+    return persianString;
+}
+$(document).ready(function() {
+    // Initialize DataTable
+    var table = $('#table1').DataTable({
+              "order": [[1, "asc"]],        
+              "searching": true,
+              "paging":true,
+              
+
+    });
+
+    // Date range filtering
+    $.fn.dataTable.ext.search.push(
+        function(settings, data, dataIndex) {
+            console.log("OOOOO")
+  
+            startDateVal = $('#start-date').val();
+            endDateVal = $('#end-date').val();
+            //var date = new Date(data[1]); // Date column data
+            dateVal=data[1]
+            
+            console.log(startDateVal)
+            console.log(endDateVal)
+            console.log(dateVal)
+
+            return (dateVal >= convertPersianToEnglishDigits(startDateVal) && dateVal <= convertPersianToEnglishDigits(endDateVal));
+        }
+    );
+
+    // Initialize Persian datepickers
+    $('#start-date').persianDatepicker({
+        format: 'YYYY-MM-DD',
+        observer: true,
+        onSelect: function() {
+            table.draw();
+        }
+    });
+
+    $('#end-date').persianDatepicker({
+        format: 'YYYY-MM-DD',
+        observer: true,
+        onSelect: function() {
+            table.draw();
+        }
+    });
+
+    // Draw table initially
+    table.draw();
+});
+    
+
+</script>
+
 
 {% endblock javascripts %}  
