floating point & percent

--- a/apps/templates/home/personalreport.html
+++ b/apps/templates/home/personalreport.html
@@ -185,30 +185,30 @@
 
 
 
-                                    <td>{{s.current_state_weight}}</td>
-                                    <td>{{s.current_state_bfm}}</td>
-                                    <td>{{s.current_state_smm}}</td>
-                                    <td>{{s.current_state_pbf}}</td>
+                                    <td>{{s.current_state_weight | floatformat:2}}</td>
+                                    <td>{{s.current_state_bfm| floatformat:2}}</td>
+                                    <td>{{s.current_state_smm | floatformat:2}}</td>
+                                    <td>{{s.current_state_pbf| floatformat:2}}</td>
                                    
-                                    <td >
-                                    {% if s.diffrence_weight > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_weight}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_weight}}</small>{% endif %}</td>
+                                    <td dir="ltr">
+                                    {% if s.diffrence_weight > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_weight| floatformat:2}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_weight| floatformat:2}}</small>{% endif %}</td>
                                     </td>
                                     
-                                    <td >
-                                    {% if s.diffrence_bfm > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_bfm}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_bfm}}</small>{% endif %}</td>
+                                    <td dir="ltr">
+                                    {% if s.diffrence_bfm > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_bfm| floatformat:2}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_bfm| floatformat:2}}</small>{% endif %}</td>
                                     </td>
                                     
-                                    <td >
-                                    {% if s.diffrence_smm > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_smm}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_smm}}</small>{% endif %}</td>
+                                    <td dir="ltr">
+                                    {% if s.diffrence_smm > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_smm| floatformat:2}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_smm| floatformat:2}}</small>{% endif %}</td>
                                     </td>
 
-                                    <td >
-                                    {% if s.diffrence_pbf > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_pbf}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_pbf}}</small>{% endif %}</td>
+                                    <td dir="ltr">
+                                    {% if s.diffrence_pbf > 0 %}   <small style="font-size: 100%;  max-width: 75%;  label.padding: 0.4em 0.6em 0.3em;" class=" bg-green">{{s.diffrence_pbf | floatformat:2}}</small> {% else %}<small style="font-size: 100%;" class="bg-red">{{s.diffrence_pb | floatformat:2}}</small>{% endif %}</td>
                                     
-                                    <td>{{s.point_state_weight}}</td>
-                                    <td>{{s.point_state_bfm}}</td>
-                                    <td>{{s.point_state_smm}}</td>
-                                    <td>{{s.point_state_pbf}}</td>
+                                    <td>{{s.point_state_weight | floatformat:2}}</td>
+                                    <td>{{s.point_state_bfm | floatformat:2}}</td>
+                                    <td>{{s.point_state_smm | floatformat:2}}</td>
+                                    <td>{{s.point_state_pbf | floatformat:2}}</td>
 
                                 </tr>
                                 {%endfor%}
